syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/noueii/gonuxt-starter/pb";


message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  User user = 1;

}
